--- a/whatsapp/manifest.json
+++ b/whatsapp/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Whastapp Chat",
-  "short_name": "Whastapp Chat",
+  "name": "WhatsApp Chat",
+  "short_name": "WhatsApp Chat",
   "gcm_sender_id": "658689336244",
   "icons": [
     {
